footers on pages with editors.  Fixed the footer height in the CSS to avoid layout problem

--- a/bundles/org.eclipse.orion.client.core/static/ide.css
+++ b/bundles/org.eclipse.orion.client.core/static/ide.css
@@ -139,9 +139,11 @@ a:hover {
 .footer {
 	text-align: center;
 	width: 100%;
+	height: 24px;
 	background: #c5c5c5;
 	border: 0px;
 	padding: 0px;
+	margin-top: 4px;
 	margin-left: 44px;
 	cursor: pointer;
 	font-size: 0.9em;
